Fixed misaligned pagination button text

--- a/src/scss/search/_search-results.scss
+++ b/src/scss/search/_search-results.scss
@@ -69,6 +69,7 @@
 
             button {
                 @include button-reset;
+                text-align: center;
                 width: 2.5em;
                 height: 2.5em;
                 overflow: hidden;
